--- a/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
+++ b/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
@@ -1,9 +1,23 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- 新 Bootstrap5 核心 CSS 文件 -->
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+
+
+
     <title>@ViewData["Title"] - Furion</title>
+    <style>
+        .container {
+            min-width: 1024px;
+        }
+    </style>
 </head>
 <body>
     @RenderBody()
