--- a/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
+++ b/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 
     <title>@ViewData["Title"] - Furion</title>
@@ -17,9 +18,105 @@
         .container {
             min-width: 1024px;
         }
+
+          body {
+        background: #efefef;
+    }
+    .flex {
+        display: flex;
+    }
+
+    .bd-navbar{
+        background-color: #7952b3;
+    }
+    .wrap {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .wrap .header{
+        height: 40px;
+    }
+
+    .wrap .wrap-content{
+        flex: 1;
+        display: flex;
+    }
+
+    .wrap .wrap-content aside{
+        width: 200px;
+    }
+
+    .wrap .wrap-content main{
+        flex: 1;
+    }
     </style>
+
 </head>
 <body>
+    <header class="navbar navbar-expand-md navbar-dark bd-navbar main-nav">
+        <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
+            <a class="navbar-brand p-0 me-2" href="/" aria-label="AssetManagment"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="bi" fill="currentColor" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
+                </svg>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
+      <div class="offcanvas-header pb-0">
+        <h5 class="offcanvas-title text-white" id="bdNavbarOffcanvasLabel">Bootstrap</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+
+      <div class="offcanvas-body pt-0">
+        <hr class="d-md-none text-white-50">
+        <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav .main-nav">
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="/" data-path="">主页</a>
+          </li>
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" aria-current="true" data-path="assetinfo" href="/assetinfo" >资料维护</a>
+          </li>
+          <!--
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="#">Examples</a>
+          </li>
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="#" target="_blank" rel="noopener">Icons</a>
+          </li>
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="#" target="_blank" rel="noopener">Themes</a>
+          </li>
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="#" target="_blank" rel="noopener">Blog</a>
+          </li>
+          -->
+        </ul>
+
+
+        <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+          <li class="nav-item col-6 col-md-auto">
+            <a class="nav-link p-2" href="#" target="_blank" rel="noopener">
+            </a>
+          </li>
+          
+        </ul>
+
+        <hr class="d-md-none text-white-50">
+
+      </div>
+    </div>
+        </nav>
+    </header>
+    <div class="container-xxl bd-layout">
     @RenderBody()
+
+        
+    </div>
+    <script src="/js/index.js"></script>
+
+            
+
+
 </body>
 </html>
