--- a/AssetManagment.Web.Entry/Views/AssetInfo/AssetSource.cshtml
+++ b/AssetManagment.Web.Entry/Views/AssetInfo/AssetSource.cshtml
@@ -55,16 +55,6 @@ For more information on enabling MVC for empty projects, visit https://go.micros
         </div>
         <div class="container-fluid">
             <table class="table">
-                <thead>
-                    <tr>
-                        <th><div class="form-check"><input class="form-check-input" type="checkbox" id="select_cbtn"/><label for="select_cbtn">选择</label></div></th>
-                        <th>编号</th>
-                        <th>名称</th>
-                        <th>备注</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody"></tbody>
             </table>
         </div>
         
@@ -121,4 +111,4 @@ For more information on enabling MVC for empty projects, visit https://go.micros
 <div></div>
 <!--新增弹窗 end-->
 
-<script src="/assetinfo/js/category.js"></script>
+<script src="/assetinfo/js/assetsource.js"></script>
