--- a/AssetManagment.Web.Entry/Views/AssetInfo/Region.cshtml
+++ b/AssetManagment.Web.Entry/Views/AssetInfo/Region.cshtml
@@ -10,6 +10,7 @@ For more information on enabling MVC for empty projects, visit https://go.micros
 }
 
 
+
 <div class="row flex-xl-nowrap">
     <aside class="card bd-sidebar col-md-3 col-xl-2  py-md-3 pl-md-5">
         <partial name="_AssetNavList.cshtml"></partial>
@@ -28,16 +29,16 @@ For more information on enabling MVC for empty projects, visit https://go.micros
         <div class="card p-3">
             <div class="row">
                 <div class="form-item  col-md-4">
-                    <input type="text" placeholder="编码" class="form-control"/>
+                    <input type="text" placeholder="编码" class="form-control input-search-code"/>
                 </div>
                 <div class="form-item col-md-4">
-                    <input type="text" placeholder="名称" class="form-control"/>
+                    <input type="text" placeholder="名称" class="form-control input-search-name"/>
                 </div>
                 <div class="form-item col-md-1">
-                    <button type="button" class="form-control btn btn-primary">查询</button>
+                    <button type="button" class="form-control btn btn-primary btn-search">查询</button>
                 </div>
                 <div class="form-item col-md-1">
-                    <button type="button" class="form-control btn btn-light">重置</button>
+                    <button type="button" class="form-control btn btn-light btn-reset">重置</button>
                 </div>
             </div>
         </div>
@@ -46,7 +47,7 @@ For more information on enabling MVC for empty projects, visit https://go.micros
         <div class="container-fluid mb-2">
             <div class="row flex-nowrap">
                 <div class="col-auto">
-                    <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#addCategoryModal">新增</button>
+                    <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#myAddRegionModal" data-bs-whatever="add">新增</button>
                 </div>
                 <div class="col-auto">
                     <button class="btn btn-sm btn-light">批量删除</button>
@@ -54,18 +55,7 @@ For more information on enabling MVC for empty projects, visit https://go.micros
             </div>
         </div>
         <div class="container-fluid">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th><div class="form-check"><input class="form-check-input" type="checkbox" id="select_cbtn"/><label for="select_cbtn">选择</label></div></th>
-                        <th>编号</th>
-                        <th>名称</th>
-                        <th>备注</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody"></tbody>
-            </table>
+            <partial name="_Table.cshtml"/>
         </div>
         
     </div>
@@ -75,11 +65,11 @@ For more information on enabling MVC for empty projects, visit https://go.micros
 
 
 <!--新增弹窗 start-->
-<div class="modal fade" tabindex="-1" id="addCategoryModal">
+<div class="modal fade" tabindex="-1" id="myAddRegionModal">
   <div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">新增资产类别</h5>
+        <h5 class="modal-title">新增区域</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -88,14 +78,14 @@ For more information on enabling MVC for empty projects, visit https://go.micros
                 <div class="col-auto">
                     <div class="form-group">
                         <label>编码</label>
-                        <input type="text" class="form-control"/>
+                        <input type="text" class="form-control input-code"/>
                     </div>
                    
                 </div>
                 <div class="col-auto">
                      <div class="form-group">
                         <label>名称</label>
-                        <input type="text" class="form-control"/>
+                        <input type="text" class="form-control input-name"/>
                     </div>
                 
                 </div>
@@ -105,15 +95,15 @@ For more information on enabling MVC for empty projects, visit https://go.micros
                  <div class="col">
                     <div class="form-group">
                         <label>备注</label>
-                        <textarea class="form-control"></textarea>
+                        <textarea class="form-control input-note"></textarea>
                     </div>
                 </div>
             </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="insertInfoBtn">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
+        <button type="button" class="btn btn-primary" id="add_region_btn">保存</button>
       </div>
     </div>
   </div>
@@ -121,4 +111,4 @@ For more information on enabling MVC for empty projects, visit https://go.micros
 <div></div>
 <!--新增弹窗 end-->
 
-<script src="/assetinfo/js/category.js"></script>
+<script src="/assetinfo/js/region.js"></script>
