--- a/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
+++ b/AssetManagment.Web.Entry/Views/Shared/_Layout.cshtml
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-
+    <script src="/src/js/index.js"></script>
     <title>@ViewData["Title"] - Furion</title>
     <style>
         .container {
@@ -29,27 +27,22 @@
     .bd-navbar{
         background-color: #7952b3;
     }
-    .wrap {
+
+    body {
+        height: 100vh;
+        width: 100vw;
         display: flex;
         flex-direction: column;
     }
 
-    .wrap .header{
-        height: 40px;
+    header{
+        height: 56px;
     }
 
-    .wrap .wrap-content{
-        flex: 1;
-        display: flex;
-    }
-
-    .wrap .wrap-content aside{
-        width: 200px;
-    }
-
-    .wrap .wrap-content main{
+    .bd-layout{
         flex: 1;
     }
+
     </style>
 
 </head>
@@ -76,6 +69,9 @@
           </li>
           <li class="nav-item col-6 col-md-auto">
             <a class="nav-link p-2" aria-current="true" data-path="assetinfo" href="/assetinfo" >资料维护</a>
+          </li>
+          <li class="nav-item col-6 col-md-auto">
+              <a class="nav-link p-2" aria-current="true" data-path="api" href="/api">接口调试</a>
           </li>
           <!--
           <li class="nav-item col-6 col-md-auto">
@@ -108,15 +104,13 @@
     </div>
         </nav>
     </header>
-    <div class="container-xxl bd-layout">
-    @RenderBody()
-
-        
+    <div class="container-xxl bd-layout overflow-hidden">
+        @RenderBody()
     </div>
-    <script src="/js/index.js"></script>
-
-            
-
-
 </body>
 </html>
+
+
+
+
+
